2005-11-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ForCmd.java (cmdProc):
        Remove extra CONTINUE branch and add
        default switch block.
        * tests/tcl/for.test: Test for Tcl 8.4
        results and remove knownBug contstraints.
        * tests/tcl/interp.test: Use knownbug
        not knownBug as constraint name.
        * tests/tcl/switch.test: Update to switch
        tests from Tcl 8.4.

2005-11-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/EvalCmd.java (cmdProc):
        Invoke eval(TclObject) instead of eval(String).
        * src/jacl/tcl/lang/Interp.java (setResult, eval,
        checkCommonInteger, checkCommonDouble,
        checkCommonBoolean, checkCommonString):
        Increment new result TclObject ref count before
        decremeting the old result ref count in the
        setResult(TclObject) method. This matches the
        Tcl 8.4 impl. Double check that common objects
        are shared to catch possible ref count errors
        in user code. Increment and decrement the passed
        in TclObject ref count in eval(TclObject) to
        match the Tcl 8.4 impl of Tcl_EvalObjEx.
        * src/jacl/tcl/lang/NamespaceCmd.java (evalCmd):
        Invoke eval(TclObject) instead of eval(String).
        * src/jacl/tcl/lang/UplevelCmd.java (cmdProc):
        Don't preserve and release TclObject passed to
        eval(TclObject) since eval now does that.
        * src/jacl/tcl/lang/Var.java (setVar): Pass
        String instead of TclObject since a String
        would get passed in the helper method anyway.
        * src/tcljava/tcl/lang/BeanEvent.java (BeanEvent):
        Save a String and invoke eval(String) later on
        instead of saving a ref to a TclObject without
        incrementing the ref count.
        * src/tcljava/tcl/lang/TclObject.java: Comment fixup.

2005-11-16  Mo DeJong  <mdejong@users.sourceforge.net>
